working - preprocessor.py can handle multi line directives by fencingthem with tripple backticks

--- a/tools/preprocess.conf
+++ b/tools/preprocess.conf
@@ -1,8 +1,15 @@
 # tools/preprocess.conf
 # Simple line-only substitutions: [[TOKEN]] = replacement
 
-[[EXAMPLE]] = <div class="example"></div>
+[[EXAMPLE]] = <div class="example">inserted this example</div>
 
 # Multi-line via file include:
 [[SNIPPET_EXAMPLE]] = @file:snippets/example.html
+
+# Multi-line fenced
+[[FENCED_EXAMPLE]] = ```html
+<div class="fenced-example">
+  <p><b>Note</b> Inserted this fenced example.</p>
+</div>
+```
 
