working - but want to give terminal message functions the same signatures

--- a/tools/preprocess.conf
+++ b/tools/preprocess.conf
@@ -1,7 +1,9 @@
 # tools/preprocess.conf
 # Simple line-only substitutions: [[TOKEN]] = replacement
-
 [[EXAMPLE]] = <div class="example">inserted this example</div>
+
+# With arguments
+[[EXAMPLE_WITH_ARGS, first, second="alpha", third="beta gamma"]] = Replacement text first is ${first} second is ${second} and third is ${third}
 
 # Multi-line via file include:
 [[SNIPPET_EXAMPLE]] = @file:snippets/example.html
